# uni_service

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: axum.rs  hello_world.rs
manager/: Cargo.toml  README.md
manager/examples/: hello_manager.rs  manager.rs
manager/src/: launchd.rs  lib.rs  manager.rs  sc.rs  systemd.rs  unix_util.rs  util.rs  win_service.rs
service/: Cargo.toml  README.md
service/examples/: axum.rs  hello_world.rs
service/src/: base.rs  lib.rs
src/: base.rs  lib.rs  linux.rs  macos.rs  unix.rs  win_service.rs  windows.rs
test_bin/: Cargo.toml
test_bin/src/: main.rs
test_bin/tests/: test_service.rs
test_bin/tests/common/: mod.rs  sockets.rs
