[workspace]
resolver = "2"
members = ["manager", "service", "test_bin"]

[workspace.dependencies]
uni_service = { path = "service" }
uni_service_manager = { path = "manager" }

ctrlc = { version = "3", features = ["termination"] }
dirs = "6"
libc = "0.2"
polling = "3"
send_ctrlc = "0.5"
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
], default-features = false }
uni_error = "0.4"
windows-service = "0.8"
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
