[workspace]
resolver = "2"
members = ["manager", "test_bin"]

[workspace.dependencies]
uni_service = { path = "." }
uni_service_manager = { path = "manager" }

axum = { version = "0.8", features = [
    "http1",
    "tokio",
], default-features = false }
bitflags = "2"
ctrlc = { version = "3", features = ["termination"] }
dirs = "6"
libc = "0.2"
polling = "3"
send_ctrlc = "0.6"
tokio = { version = "1" }
tracing = { version = "0.1", features = ["std"], default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
], default-features = false }
uni_error = "0.11"
windows-service = "0.8"

[package]
name = "uni_service"
version = "0.3.7"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Universal service crate for building cross platform OS services"
repository = "https://github.com/nu11ptr/uni_service"
documentation = "https://docs.rs/uni_service"
keywords = ["service", "daemon", "windows", "linux", "macos"]
categories = ["api-bindings", "os"]
readme = "README.md"
edition = "2024"

[dependencies]
ctrlc.workspace = true
tokio = { workspace = true, features = ["sync"], optional = true }
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
uni_error.workspace = true
windows-service.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tracing-subscriber.workspace = true

[[example]]
name = "axum"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
