[package]
name = "test_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
uni_service.workspace = true


[dev-dependencies]
libc.workspace = true
polling.workspace = true
send_ctrlc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uni_service_manager.workspace = true
windows-sys.workspace = true
